Fixed sign up box on mobile version

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -6840,9 +6840,13 @@ section.c-sponsor-block.sponsor-paid-wrapper {
 			position: relative;
 		}
 	}
-	@media screen and (max-width: 820px) {
-		display: block;
+	
+	@media screen and (min-width: 821px) {
+		display: none!important;
 	}
+	// @media screen and (max-width: 820px) {
+	// 	display: block;
+	// }
 }
 @media screen and (max-width: 782px) {
 	body.logged-in.admin-bar {
